# stimulus

./: .clang-format  .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/stimulus/: stimulus.h
core/include/stimulus/common/: datastructure.h  enumeration.h  singleton.h
core/include/stimulus/operators/io_operator/: hdf5_io_operator.h
core/include/stimulus/operators/sample_converter/: hdf5_sample_converter.h
core/include/stimulus/operators/sample_creator/: hdf5_sample_creator.h
core/src/stimulus/: stimulus.cpp
core/src/stimulus/operators/: operator.h
core/src/stimulus/operators/io_operator/: abstract_io_operator.h  hdf5_io_operator.cpp
core/src/stimulus/operators/sample_converter/: abstract_sample_converter.h  hdf5_sample_converter.cpp
core/src/stimulus/operators/sample_creator/: abstract_sample_creator.h  hdf5_sample_creator.cpp
plugins/: CMakeLists.txt
plugins/tensorflow/: CMakeLists.txt  hdf5_io_op.cpp  hdf5_io_op.h  hdf5_sample_creator_op.cpp  hdf5_sample_creator_op.h
scripts/: anatomy.sh  cosmic_tagger.sh  decoupling.sh  dffn.sh  input_pipeline_performance.sh  overlap.sh  prefetch.sh  preproc_parallel.sh  read_parallel.sh
